# railcar

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CITATION.cff  Cargo.toml  README.md  REUSE.toml  about.hbs  about.toml  biome.json  bunfig.toml  clippy.toml  deny.toml  mise.toml  package.json  requirements.txt  run_one.sbatch  slurm_run_one.sbatch  slurm_run_zip_v3.sbatch  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: book.toml  feedback.md  main.md
examples/: .gitignore  library-properties.csv  locate-index.js  package.json
infra/: base.py  coverage.fish  cron.sh  explore.ipynb  fuzz.py  jazzer.py  jobs.jsonl  long.py  make_jobs.py  overall_cov.csv  railcar.py  railcar_orig.py  replay.py  report.ipynb  run.py  scheduler.py  setup.py  slurm_make_jobs.py  slurm_run_one.py  slurm_run_one.sbatch  util.py
notes/: API Progress Feedback.md  Benchmarks.md  Coverage Instrumentation.md  Dynamic Type Refinement.md  Mutation Performance.md  Mutations.md  Oracles.md  Performance Profiling.md  Reporter.md  Shared Memory.md  Uncertainty Types.md  test-syntest-inference-with-examples.md
patches/: @syntest+analysis-javascript#0.2.0-beta.20.patch  @syntest+analysis-javascript+0.2.0-beta.20.patch
reporter/: api.ts  app.ts  package.json  tsconfig.json
scripts/: analyze-api-surface.ts  analyze-libraries.ts  branch-extract.test.ts  branch-extract.ts  build-syntest-json.sh  bundle-all.ts  check-schemas.test.ts  common.ts  coverage-all.sh  coverage-to-sqlite.ts  coverage-v8.sh  coverage.sh  diff-coverage-html-view.sh  diff-coverage.sh  lcov-diff.ts  (+17 more)
(+253 files in other folders)
