[workspace]
resolver = "2"
members = [
  "packages/cli",
  "packages/metrics",
  "packages/graph",
  "packages/worker-sys",
  "packages/tools"
]

[workspace.dependencies]
log = "0.4.27"
env_logger = "0.11.7"
anyhow = "1.0.99"
criterion = "0.7.0"
libafl = { git = "https://github.com/mayant15/LibAFL.git" }
libafl_bolts = { git = "https://github.com/mayant15/LibAFL" }
